[package]
name = "regtest-chain-generator"
version = "0.1.0"
license = "MIT"
authors = ["John L. Jegutanis <erasmospunk@gmail.com>"]
edition = "2018"
description = "Bitcoin's regtest chain generator utility"

[[bin]]
path = "src/main.rs"
name = "chaingen"

[dependencies]
bitcoin = "0.23"
daemon-runner = { git = "https://github.com/erasmospunk/rust-daemon-runner.git" }
clap = "3.0.0-beta.1"
log = "0.4"
simple_logger = "0.5.0"